Added Local Passport Strategy For Both Judges And Registrars

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 CLIENT_URL = http://localhost:3000
 PORT=5000
-MONGO_URI = "mongodb+srv://ecourt:guptagang@cluster0.qd3zg.mongodb.net/test"
+MONGO_URI = "mongodb+srv://ecourt:guptagang@cluster0.qd3zg.mongodb.net/e-court"
 SECRET_KEY=Hello123
 GENERATE_SOURCEMAP=false
