--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ PORT=5000
 MONGO_URI = "mongodb+srv://ecourt:guptagang@cluster0.qd3zg.mongodb.net/e-court"
 SECRET_KEY=Hello123
 GENERATE_SOURCEMAP=false
+GEOCODER = 81af5dcd211948d28b3a368d562f1d1e
