--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "child_process": "^1.0.2",
@@ -24,6 +25,10 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "persist": "^0.2.7",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "request": "^2.88.2",
     "validator": "^13.7.0"
   }
