--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.0",
+    "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
