--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "apexcharts": "^3.35.0",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
